--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 815416380664578058
 textchannel = 815415872713523232
-ladderchannel = 
+ladderchannel = 815415872713523232
 jungsanchannel = 
 killchannel = 
 racingchannel = 815415872713523232
