--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,10 +2,10 @@ timezone = 9
 
 voicechannel = 815416380664578058
 textchannel = 815415872713523232
-ladderchannel = 815415872713523232
+ladderchannel =
 jungsanchannel = 
 killchannel = 
-racingchannel = 815415872713523232
+racingchannel =
 itemchannel = 
 
 before_alert = 1
