--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,10 +2,10 @@ timezone = 9
 
 voicechannel = 815416380664578058
 textchannel = 815415872713523232
-ladderchannel =
+ladderchannel = 815415872713523232
 jungsanchannel = 
 killchannel = 
-racingchannel =
+racingchannel = 815415872713523232
 itemchannel = 
 
 before_alert = 1
